--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Build and Release Folders
+# Buiyyld and Release Folders
 bin-debug/
 bin-release/
 [Oo]bj/
@@ -13,6 +13,22 @@ bin-release/
 *.ipa
 *.apk
 
-# Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
-# should NOT be excluded as they contain compiler settings and other important
-# information for Eclipse / Flash Builder.
+# Mobile Tools for Java (J2ME)
+  .mtj.tmp/
+  .logs/*
+  **/*.iml
+# Package Files #
+  *.jar
+  *.war
+  *.ear
+  target
+out/
+  .idea
+  .DS_Store
+  exports
+
+  hs_err_pid*
+  .tags
+  .tags_sorted_by_file
+
+LICENSE
