finsih 47:classified management business

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,3 +17,7 @@ mybatis-plus:
   global-config:
     db-config:
       id-type: ASSIGN_ID
+      
+# 指定以文件上传的位置
+reggie:
+  path: E:\JavaProject\Reggie\upload
