--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,9 @@ spring:
     password: 123456
     # 选用0号数据库
     database: 0  
+  cache:
+    redis:
+      time-to-live: 1800000 #设置缓存数据的过期时间
     
 mybatis-plus:
   configuration:
