修改服务器资源路径

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -64,4 +64,6 @@ mybatis-plus:
       
 # 指定以文件上传的位置
 reggie:
-  path: E:\JavaProject\Reggie\upload\
+#  path: E:\JavaProject\Reggie\upload\
+#  添加服务器资源路径
+  path: /usr/local/app/javaApp/reggie/reggie/upload
